Updates CMakeLists to work on UNIX.
Signed-off-by: Ramūnas Mažeikis <ramunasnezinomas@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,7 @@
 cmake_minimum_required(VERSION 3.0.0)
 project(libgramas VERSION 0.1.0)
 
-macro(build_test test_name)
-	add_executable(${test_name} test/${test_name}.c)
-	target_link_libraries(${test_name} libgramas)
-	add_test(${test_name} ${test_name})
-endmacro()
-
-include(CTest)
-enable_testing()
-
-include_directories(include)
-add_library(libgramas SHARED
+set(DEFAULT_SRC
 	buf.c
 	cmd_parse.c
 	gr_str.c
@@ -19,7 +9,23 @@ add_library(libgramas SHARED
 	matrix.c
 	ptr_array.c
 	space.c
-	utf8.c)
+	utf8.c
+)
+macro(build_test test_name)
+	add_executable(${test_name} test/${test_name}.c)
+	target_link_libraries(${test_name} ${PROJECT_NAME})
+	add_test(${test_name} ${test_name})
+endmacro()
+
+include(CTest)
+enable_testing()
+
+include_directories(include)
+add_library(${PROJECT_NAME} SHARED ${DEFAULT_SRC})
+
+if (UNIX)
+	target_link_libraries(${PROJECT_NAME} -lm)
+endif(UNIX)
 
 build_test(tst_hash_map_put)
 build_test(tst_matrix_mul)
