--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,13 @@ project(libgramas VERSION 0.1.0 LANGUAGES C)
 set(DEFAULT_SRC
 	buf.c
 	cmd_parse.c
+	field.c
 	gr_str.c
 	hash_map.c
 	matrix.c
 	ptr_array.c
 	space.c
+	str.c
 	utf8.c
 )
 macro(build_test test_name)
@@ -31,6 +33,8 @@ build_test(tst_hash_map_put)
 build_test(tst_matrix_mul)
 build_test(tst_ptr_arr_add)
 build_test(tst_space_distance)
+build_test(tst_rdwr_bele)
+build_test(tst_buf2str)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
