Added string splitting capability.
Signed-off-by: Ramūnas Mažeikis <r.mazeikis@gmc.lt>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,15 +34,17 @@ if (UNIX)
 	target_link_libraries(${LIB_TARGET} -lm)
 endif(UNIX)
 
-build_test(tst_hash_map_put)
-build_test(tst_matrix_mul)
-build_test(tst_ptr_arr_add)
-build_test(tst_space_distance)
-build_test(tst_rdwr_bele)
-build_test(tst_rdwr_pck)
 build_test(tst_buf2str)
+build_test(tst_hash_map_put)
 build_test(tst_hexdump)
 build_test(tst_list_append)
+build_test(tst_matrix_mul)
+build_test(tst_ptr_arr_add)
+build_test(tst_rdwr_bele)
+build_test(tst_rdwr_pck)
+build_test(tst_space_distance)
+build_test(tst_str_split)
+build_test(tst_str_split_p)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
